# CrewAI

./: LICENSE  Readme.md
Gauge/: P01 - Multi_AI_Agent_System_for_Research_and_Scribing_Using_CrewAI.ipynb  P01 - Multi_AI_Agent_for_Research_and_Scribing_Using_CrewAI.ipynb  P02 - Multi_AI_Agent_Customer_Support_Automation_Using_CrewAI.ipynb
Gauge/01 - Multi_AI_Agent_for_Research_and_Scribing_Using_CrewAI/: P01 - Multi_AI_Agent_for_Research_and_Scribing_Using_CrewAI.ipynb
Gauge/02 - Multi_AI_Agent_Customer_Support_Automation_Using_CrewAI/: P02 - Multi_AI_Agent_Customer_Support_Automation_Using_CrewAI.ipynb
Gauge/07 - Augemented LLMs/litellm/: README.md  pyproject.toml
Gauge/07 - Augemented LLMs/litellm/src/litellm/: litellm.py
Gauge/07 - Augemented LLMs/localllm/: README.md  poem.txt  pyproject.toml
Gauge/07 - Augemented LLMs/localllm/src/localllm/: main.py
Gauge/07 - Augemented LLMs/multiple_agents_with_two_llms/: pyproject.toml
Gauge/07 - Augemented LLMs/multiple_agents_with_two_llms/src/grinding/crews/dev_crew/: dev_crew.py
